--- a/index.html
+++ b/index.html
@@ -52,24 +52,30 @@
 
 <!-- Showcase -->
 
-    <section class="bg-dark text-light p-5 p-lg-0 pt-lg-5 text-center text-sm-start" <!--The section tag just adds different sections to the page and is basically a bunch of chapters, headers, etc... Bg dark makes the background dark and the text light makes the text lighter (obvious). And p-5 adds a padding of 5 pixels on the section. The text-center just centers the text in the middle-->
+    <section class="bg-dark text-light p-5 p-lg-0 pt-lg-5 text-center text-sm-start"> <!--The section tag specifies that the following code is one section, or chapter. The bg-dark makes the background dark while the text light makes the text lighter. Text-center just centers the text, but text-sm-start makes the text aligned to the start of the block when it is not small.-->
       <div class="container pt-5"> <!--Container to make sure the contents don't press up against the edge, adding padding top of 5 because the navbar was covering my content-->
-        <div class="d-sm-flex"> <!--The flex turns the two elements below, the heading and image, into a flex row (so they are in the same row). The sm specifies that the flex will only activate with sizes bigger than the small screen size-->
+        <div class="d-sm-flex align-items-center justify-content-between"> <!--The flex turns the two elements below, the heading and image, into a flex row (so they are in the same row). The sm specifies that the flex will only activate with sizes bigger than the small screen size-->
           <div>
             <h1>Welcome to 
               <span class="text-warning"> <!--Makes it so that the text below is a different color-->
                 my website!
               </span></h1> <!--Just means heading 1 and we are specifying the heading text-->
-              <p>
+              <p class="lead"> <!--Adds a paragraph, what you see below, and we can make the text bigger with the lead class-->
                 Biomedical Engineering and Computer Science Senior | SMMA Agency 
                 Owner | I study and teach biomedical engineering, machine learning, 
                 and web development.
               </p>
+
+              <button class="btn btn-primary btn-lg">Contact Me</button>
           </div>
-          <img class="img-fluid w-50" src = "img/showcase.svg" alt=""/> <!--The img tag tells HTML that we are putting an image in, and the img-fluid class makes it so that the image is bound to the container and the w-50 makes it 50% of its original size. The src specifes what image we are putting in and the alt tag can be used to add an alternative text/desription to the image-->
+          <img class="img-fluid w-50 d-none d-sm-block" src = "img/showcase.svg" alt=""/> <!--The img tag tells HTML that we are putting an image in, and the img-fluid class makes it so that the image is bound to the container and the w-50 makes it 50% of its original size. The src specifes what image we are putting in and the alt tag can be used to add an alternative text/desription to the image-->
         </div>
       </div>
     </section>
+
+<!--Newsletter-->
+
+    
 
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
