--- a/index.html
+++ b/index.html
@@ -61,12 +61,10 @@
                 my website!
               </span></h1> <!--Just means heading 1 and we are specifying the heading text-->
               <p class="lead"> <!--Adds a paragraph, what you see below, and we can make the text bigger with the lead class-->
-                Biomedical Engineering and Computer Science Senior | SMMA Agency 
-                Owner | I study and teach biomedical engineering, machine learning, 
+                I study and teach biomedical engineering, machine learning, 
                 and web development.
               </p>
-
-              <button class="btn btn-primary btn-lg">Contact Me</button>
+              <button class="btn btn-primary btn-lg">Contact Me</button> <!--Creates a button where the button color is primary (or blue) and the button size is large. The text inside the button is Contact Me-->
           </div>
           <img class="img-fluid w-50 d-none d-sm-block" src = "img/showcase.svg" alt=""/> <!--The img tag tells HTML that we are putting an image in, and the img-fluid class makes it so that the image is bound to the container and the w-50 makes it 50% of its original size. The src specifes what image we are putting in and the alt tag can be used to add an alternative text/desription to the image-->
         </div>
@@ -75,7 +73,27 @@
 
 <!--Newsletter-->
 
-    
+    <section class="bg-primary text-light p-5"> <!--Creates a section with the color being primary (or blue) and the text is light. The padding on the section is 5-->
+      <div class="container"> <!--Container allows things to stay inside a certain parameter-->
+        <div class="d-md-flex justify-content-between align-items-center"> <!--Creates a div where flex is only activated when the screen size is smaller than the medium breakpoint. And the items are justified, or aligned so that they occupy equal space on the left and right, with all the items being aligned in the middle-->
+          <h3 class="mb-3 mb-md-0">Let me reach out to you!</h3> <!--The third heading where the margin bottom is 3 but not medium screen sizes the margin bottom is 0-->
+
+          <div class="input-group news-input">
+            <input 
+            type="text" 
+            class="form-control" 
+            placeholder="Enter Email" 
+            />
+            <button 
+            class="btn btn-dark btn-lg" 
+            type="button"
+            >
+            Button
+            </button>
+          </div>
+        </div> 
+      </div>
+    </section>
 
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
