--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
         <div class="d-md-flex justify-content-between align-items-center"> <!--Creates a div where flex is only activated when the screen size is smaller than the medium breakpoint. And the items are justified, or aligned so that they occupy equal space on the left and right, with all the items being aligned in the middle-->
           <h3 class="mb-3 mb-md-0">Let me reach out to you!</h3> <!--The third heading where the margin bottom is 3 but not medium screen sizes the margin bottom is 0-->
 
+          <!--The input group code is from the Bootstrap website-->
+
           <div class="input-group news-input">
             <input 
             type="text" 
@@ -88,10 +90,21 @@
             class="btn btn-dark btn-lg" 
             type="button"
             >
-            Button
+            Send
             </button>
           </div>
         </div> 
+      </div>
+    </section>
+
+<!--Boxes-->
+    <section class="p-5"> <!--Section with padding 5 all around-->
+      <div class="container">
+        <div class="row text-center"> <!--Creates a row and centers it to the text-->
+          <div class="col-md">123</div> <!--Create columns that only get added whent the screen size is medium or larger-->
+          <div class="col-md">123</div>
+          <div class="col-md">123</div>
+        </div>
       </div>
     </section>
 
