--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 <!-- Implementation of Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"> <!--Allows us to use Bootstrap icons-->
     <link rel="stylesheet" href="style.css"> <!--Link to the custom style sheet to seperate our CSS from HTML-->
 
     <title>Personal Website</title> <!--Title the document to show up on the tab-->
@@ -101,7 +102,13 @@
     <section class="p-5"> <!--Section with padding 5 all around-->
       <div class="container">
         <div class="row text-center"> <!--Creates a row and centers it to the text-->
-          <div class="col-md">123</div> <!--Create columns that only get added whent the screen size is medium or larger-->
+          <div class="col-md"> <!--Create columns that only get added whent the screen size is medium or larger-->
+            <div class="card bg-dark text-light"> <!--Creates a card, or a block, with a dark background and light text-->
+              <div class="card-body text-center"> <!--The card text is centered in the middle of the card-->
+                <i class="bi bi-diagram-3-fill"></i> <!--Calls on the available Bootstrap icons-->
+              </div>
+            </div>
+          </div>
           <div class="col-md">123</div>
           <div class="col-md">123</div>
         </div>
