--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <section class="bg-primary text-light p-5"> <!--Creates a section with the color being primary (or blue) and the text is light. The padding on the section is 5-->
       <div class="container"> <!--Container allows things to stay inside a certain parameter-->
         <div class="d-md-flex justify-content-between align-items-center"> <!--Creates a div where flex is only activated when the screen size is smaller than the medium breakpoint. And the items are justified, or aligned so that they occupy equal space on the left and right, with all the items being aligned in the middle-->
-          <h3 class="mb-3 mb-md-0">Let me reach out to you!</h3> <!--The third heading where the margin bottom is 3 but not medium screen sizes the margin bottom is 0-->
+          <h3 class="mb-3 mb-md-0">Let me reach out to you!</h3> <!--The size is set to h3 and the margin bottom is 3 but not medium screen sizes the margin bottom is 0-->
 
           <!--The input group code is from the Bootstrap website-->
 
@@ -99,21 +99,68 @@
     </section>
 
 <!--Boxes-->
+
     <section class="p-5"> <!--Section with padding 5 all around-->
       <div class="container">
         <div class="row text-center"> <!--Creates a row and centers it to the text-->
           <div class="col-md"> <!--Create columns that only get added whent the screen size is medium or larger-->
             <div class="card bg-dark text-light"> <!--Creates a card, or a block, with a dark background and light text-->
               <div class="card-body text-center"> <!--The card text is centered in the middle of the card-->
-                <i class="bi bi-diagram-3-fill"></i> <!--Calls on the available Bootstrap icons-->
+                <div class="h1 mb-3"> <!--Makes the icon the size of an h1-->
+                  <i class="bi bi-diagram-3-fill"></i> <!--Calls on the available Bootstrap icons-->
+                </div>
+                <h3 class="card-title mb-3">
+                  Machine Learning
+                </h3>
+                <p class="card-text">
+                  Checkout my posts on machine learning where I explain everything
+                  I have learned through courses.
+                </p>
+                <a href="#" class="btn btn-primary">Read More</a>
               </div>
             </div>
           </div>
-          <div class="col-md">123</div>
-          <div class="col-md">123</div>
+          <div class="col-md">
+            <div class="card bg-dark text-light"> <!--Creates a card, or a block, with a dark background and light text-->
+              <div class="card-body text-center"> <!--The card text is centered in the middle of the card-->
+                <div class="h1 mb-3"> <!--Makes the icon the size of an h1-->
+                  <i class="bi bi-code-slash"></i> <!--Calls on the available Bootstrap icons-->
+                </div>
+                <h3 class="card-title mb-3">
+                  Web Development
+                </h3>
+                <p class="card-text">
+                  Checkout my posts on web development where I explain in
+                  I have learned through courses.
+                </p>
+                <a href="#" class="btn btn-primary">Read More</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md">
+            <div class="card bg-dark text-light"> <!--Creates a card, or a block, with a dark background and light text-->
+              <div class="card-body text-center"> <!--The card text is centered in the middle of the card-->
+                <div class="h1 mb-3"> <!--Makes the icon the size of an h1-->
+                  <i class="bi bi-lungs-fill"></i> <!--Calls on the available Bootstrap icons-->
+                </div>
+                <h3 class="card-title mb-3">
+                  Biomedical Engineering
+                </h3>
+                <p class="card-text">
+                  Checkout my posts on biomedical engineering where I explain everything
+                  I have learned in courses.
+                </p>
+                <a href="#" class="btn btn-primary">Read More</a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
+
+    <!--Learn-->
+
+    
 
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
