Adding section on Learn Web Development with paragraphs and button

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
     <section class="p-5"> <!--Section with padding 5 all around-->
       <div class="container">
-        <div class="row text-center"> <!--Creates a row and centers it to the text-->
+        <div class="row text-center g-4"> <!--Creates a row and centers it to the text-->
           <div class="col-md"> <!--Create columns that only get added whent the screen size is medium or larger-->
             <div class="card bg-dark text-light"> <!--Creates a card, or a block, with a dark background and light text-->
               <div class="card-body text-center"> <!--The card text is centered in the middle of the card-->
@@ -113,8 +113,7 @@
                   Machine Learning
                 </h3>
                 <p class="card-text">
-                  Checkout my posts on machine learning where I explain everything
-                  I have learned through courses.
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla voluptatum doloribus doloremque eveniet adipisci ipsam!
                 </p>
                 <a href="#" class="btn btn-primary">Read More</a>
               </div>
@@ -130,8 +129,7 @@
                   Web Development
                 </h3>
                 <p class="card-text">
-                  Checkout my posts on web development where I explain in
-                  I have learned through courses.
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. In neque at dignissimos molestias explicabo beatae.
                 </p>
                 <a href="#" class="btn btn-primary">Read More</a>
               </div>
@@ -141,14 +139,13 @@
             <div class="card bg-dark text-light"> <!--Creates a card, or a block, with a dark background and light text-->
               <div class="card-body text-center"> <!--The card text is centered in the middle of the card-->
                 <div class="h1 mb-3"> <!--Makes the icon the size of an h1-->
-                  <i class="bi bi-lungs-fill"></i> <!--Calls on the available Bootstrap icons-->
+                  <i class="bi bi-diagram-3-fill"></i> <!--Calls on the available Bootstrap icons-->
                 </div>
                 <h3 class="card-title mb-3">
                   Biomedical Engineering
                 </h3>
                 <p class="card-text">
-                  Checkout my posts on biomedical engineering where I explain everything
-                  I have learned in courses.
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. , nisi quia doloribus sed quod magni!
                 </p>
                 <a href="#" class="btn btn-primary">Read More</a>
               </div>
@@ -158,9 +155,29 @@
       </div>
     </section>
 
-    <!--Learn-->
-
-    
+    <!--Learn Sections-->
+    <section id="ml" class="p-5">
+      <div class="container">
+        <div class="row align-items-center justify-content-between">
+          <div class="col-md">
+            <img src="img/fundamentals.svg" class="img-fluid" alt="">
+          </div>
+          <div class="col-md p-5">
+            <h2>Learn Web Development</h2>
+            <p class="lead">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem facilis quasi commodi nostrum mollitia ea quaerat vero asperiores placeat porro sint deserunt, beatae voluptatum reiciendis. Fuga alias quo cupiditate iure!
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae culpa sequi neque autem eligendi quo vel totam temporibus iste, alias, esse, harum eaque! Sequi cum, reprehenderit inventore corrupti quod enim.
+            </p>
+            <a href="#" class="btn btn-light mt-3">
+              <i class="bi bi-chevron-right"></i>
+              Read More
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
