--- a/index.html
+++ b/index.html
@@ -179,6 +179,31 @@
       </div>
     </section>
 
+    <section id="ml" class="p-5 bg-dark text-light">
+      <div class="container">
+        <div class="row align-items-center justify-content-between">
+          <div class="col-md p-5">
+            <h2>Learn Machine Learning</h2>
+            <p class="lead">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem facilis quasi commodi nostrum mollitia ea quaerat vero asperiores placeat porro sint deserunt, beatae voluptatum reiciendis. Fuga alias quo cupiditate iure!
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae culpa sequi neque autem eligendi quo vel totam temporibus iste, alias, esse, harum eaque! Sequi cum, reprehenderit inventore corrupti quod enim.
+            </p>
+            <a href="#" class="btn btn-light mt-3">
+              <i class="bi bi-chevron-right"></i>
+              Read More
+            </a>
+          </div>
+          <div class="col-md">
+            <img src="img/react.svg" class="img-fluid" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
