--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <!-- Showcase -->
 
     <section class="bg-dark text-light p-5 p-lg-0 pt-lg-5 text-center text-sm-start"> <!--The section tag specifies that the following code is one section, or chapter. The bg-dark makes the background dark while the text light makes the text lighter. Text-center just centers the text, but text-sm-start makes the text aligned to the start of the block when it is not small.-->
-      <div class="container pt-5"> <!--Container to make sure the contents don't press up against the edge, adding padding top of 5 because the navbar was covering my content-->
+      <div class="container"> <!--Container to make sure the contents don't press up against the edge-->
         <div class="d-sm-flex align-items-center justify-content-between"> <!--The flex turns the two elements below, the heading and image, into a flex row (so they are in the same row). The sm specifies that the flex will only activate with sizes bigger than the small screen size-->
           <div>
             <h1>Welcome to 
@@ -163,7 +163,7 @@
             <img src="img/fundamentals.svg" class="img-fluid" alt="">
           </div>
           <div class="col-md p-5">
-            <h2>Learn Web Development</h2>
+            <h2>Learn Machine Learning</h2>
             <p class="lead">
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem facilis quasi commodi nostrum mollitia ea quaerat vero asperiores placeat porro sint deserunt, beatae voluptatum reiciendis. Fuga alias quo cupiditate iure!
             </p>
@@ -183,7 +183,7 @@
       <div class="container">
         <div class="row align-items-center justify-content-between">
           <div class="col-md p-5">
-            <h2>Learn Machine Learning</h2>
+            <h2>Learn Web Development</h2>
             <p class="lead">
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem facilis quasi commodi nostrum mollitia ea quaerat vero asperiores placeat porro sint deserunt, beatae voluptatum reiciendis. Fuga alias quo cupiditate iure!
             </p>
@@ -202,7 +202,8 @@
       </div>
     </section>
 
-
+<!--FAQ Accordion-->
+    <section id="web" class="p-5"></section>
 
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
