--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
         <div class="collapse navbar-collapse" id="navmenu"> <!--Creates a div that allows the navbar to collapse when the screen size reduces-->
           <ul class="navbar-nav ms-auto"> <!--The ul tag just creates an unordered list item, basically a bullet list. The ms-auto automatically puts the list items to the right most side-->
             <li class="nav-item"> <!--The li tag means list item and we are adding what we want to put inside the list with the code below-->
-              <a href="#ml" class="nav-link">Machine Learning</a> <!--The a tag creates a hyperlink that allows us to add clickable text, in this case the "Machine Learning" text. The href tag is the destination of the link, which is currently pointing to #ml so it will scroll to the part of the page about ML-->
+              <a href="#ml" class="nav-link">Big Three</a> <!--The a tag creates a hyperlink that allows us to add clickable text, in this case the "Machine Learning" text. The href tag is the destination of the link, which is currently pointing to #ml so it will scroll to the part of the page about ML-->
             </li>
             <li class="nav-item">
-              <a href="#web" class="nav-link">Web Development</a> <!--Creating a clickable link for the text "Web Development" and clicking it will scroll to the section with webdev-->
+              <a href="#questions" class="nav-link">Questions</a> <!--Creating a clickable link for the text "Web Development" and clicking it will scroll to the section with webdev-->
             </li>
             <li class="nav-item">
               <a href="#bme" class="nav-link">Biomedical Engineering</a> <!--Creating a clickable link for the text "Biomedical Engineering", scrolls to bme-->
@@ -179,7 +179,7 @@
       </div>
     </section>
 
-    <section id="ml" class="p-5 bg-dark text-light">
+    <section class="p-5 bg-dark text-light">
       <div class="container">
         <div class="row align-items-center justify-content-between">
           <div class="col-md p-5">
@@ -202,8 +202,31 @@
       </div>
     </section>
 
+    <section class="p-2">
+      <div class="container">
+        <div class="row align-items-center justify-content-between">
+          <div class="col-md">
+            <img src="img/fundamentals.svg" class="img-fluid" alt="">
+          </div>
+          <div class="col-md p-5">
+            <h2>Learn Biomedical Engineering</h2>
+            <p class="lead">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem facilis quasi commodi nostrum mollitia ea quaerat vero asperiores placeat porro sint deserunt, beatae voluptatum reiciendis. Fuga alias quo cupiditate iure!
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae culpa sequi neque autem eligendi quo vel totam temporibus iste, alias, esse, harum eaque! Sequi cum, reprehenderit inventore corrupti quod enim.
+            </p>
+            <a href="#" class="btn btn-light mt-3">
+              <i class="bi bi-chevron-right"></i>
+              Read More
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+
 <!--FAQ Accordion-->
-    <section id="web" class="p-5">
+    <section id="questions" class="p-5">
       <div class="container">
         <h2 class="text-center mb-4">Frequently Asked Questions</h2>
         <div class="accordion accordion-flush" id="accordionFlushExample">
@@ -211,35 +234,63 @@
           <!--Item #1-->
 
           <div class="accordion-item">
-            <h2 class="accordion-header" id="flush-headingOne">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                Accordion Item #1
+            <h2 class="accordion-header">
+              <button 
+              class="accordion-button collapsed" 
+              type="button" 
+              data-bs-toggle="collapse" 
+              data-bs-target="#question-one" 
+              >
+                What do frameworks you use?
               </button>
             </h2>
-            <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-              <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+            <div id="question-one" class="accordion-collapse collapse" data-bs-parent="#questions">
+              <div class="accordion-body">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni eos ut aliquid ad accusamus quos praesentium quis adipisci consequuntur ipsum laboriosam possimus labore, ipsa, inventore sequi eius consectetur sint quibusdam?
+              </div>
             </div>
           </div>
+
+          <!--Item #2-->
+
           <div class="accordion-item">
-            <h2 class="accordion-header" id="flush-headingTwo">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                Accordion Item #2
+            <h2 class="accordion-header">
+              <button 
+              class="accordion-button collapsed" 
+              type="button" 
+              data-bs-toggle="collapse" 
+              data-bs-target="#question-two"
+              >
+                How are you able to build machine learning models?
               </button>
             </h2>
-            <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-              <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+            <div id="question-two" class="accordion-collapse collapse" data-bs-parent="#questions">
+              <div class="accordion-body">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt sit aut fugiat modi maxime aperiam odio nostrum totam quis. At laudantium aliquid cumque fuga enim in fugiat dicta dolorem odit.
+              </div>
             </div>
           </div>
+
+          <!--Item #3-->
+
           <div class="accordion-item">
-            <h2 class="accordion-header" id="flush-headingThree">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                Accordion Item #3
+            <h2 class="accordion-header">
+              <button 
+              class="accordion-button collapsed" 
+              type="button" 
+              data-bs-toggle="collapse" 
+              data-bs-target="#question-three" 
+              >
+                How to hell do you say your name?
               </button>
             </h2>
-            <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-              <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+            <div id="question-three" class="accordion-collapse collapse" data-bs-parent="#questions">
+              <div class="accordion-body">
+                RE and then DAY. Its as easy as it looks :)
+              </div>
             </div>
           </div>
+
         </div>
       </div>
     </section>
