Implementing the About section and adding cards for people

--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
         <div class="collapse navbar-collapse" id="navmenu"> <!--Creates a div that allows the navbar to collapse when the screen size reduces-->
           <ul class="navbar-nav ms-auto"> <!--The ul tag just creates an unordered list item, basically a bullet list. The ms-auto automatically puts the list items to the right most side-->
             <li class="nav-item"> <!--The li tag means list item and we are adding what we want to put inside the list with the code below-->
-              <a href="#ml" class="nav-link">Big Three</a> <!--The a tag creates a hyperlink that allows us to add clickable text, in this case the "Machine Learning" text. The href tag is the destination of the link, which is currently pointing to #ml so it will scroll to the part of the page about ML-->
+              <a href="#ml" class="nav-link">Engineering</a> <!--The a tag creates a hyperlink that allows us to add clickable text, in this case the "Machine Learning" text. The href tag is the destination of the link, which is currently pointing to #ml so it will scroll to the part of the page about ML-->
             </li>
             <li class="nav-item">
               <a href="#questions" class="nav-link">Questions</a> <!--Creating a clickable link for the text "Web Development" and clicking it will scroll to the section with webdev-->
             </li>
             <li class="nav-item">
-              <a href="#bme" class="nav-link">Biomedical Engineering</a> <!--Creating a clickable link for the text "Biomedical Engineering", scrolls to bme-->
+              <a href="#about" class="nav-link">About Me</a> <!--Creating a clickable link for the text "Biomedical Engineering", scrolls to bme-->
             </li>
           </ul>
         </div>
@@ -291,6 +291,95 @@
             </div>
           </div>
 
+        </div>
+      </div>
+    </section>
+
+    <section id="about" class="p-5 bg-primary">
+      <div class="container">
+        <h2 class="text-center text-white">
+          About Me
+        </h2>
+        <p class="lead text-center text-white mb-5">
+          As a senior in college studying computer science and biomedical engineering, I have developed a strong foundation in both technical and analytical skills. In addition to my coursework, I have also gained valuable experience through my tech blog, where I regularly share my thoughts and insights on emerging technologies and their applications in machine learning, web development, and biomedical engineering.
+        </p>
+        <p class="lead text-center text-white mb-5">
+          I have consistently sought out opportunities to apply my skills and knowledge in real-world settings. For example, I have worked on many independent projects, including several machine learning-based analyses of real-world data as well as a business portfolio for my own advertising agency, and more.
+        </p>
+        <p class="lead text-center text-white mb-5">
+          In the future, I am eager to leverage my diverse skill set to make a positive impact in the field I choose to concentrate on. I am confident that my passion for technology and my dedication to continuous learning will make me a valuable asset to any team.
+        </p>
+        <div class="row g-4">
+
+          <!--Person 1-->
+
+          <div class="col-md-6 col-lg-3">
+            <div class="card bg-light">
+              <div class="card-body text-center">
+                <img src="https://randomuser.me/api/portraits/men/11.jpg" class="rounded-circle mb-3">
+                <h3 class="card-title mb-3">Stephen Stark</h3>
+                <p class="card-text">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo, soluta nobis amet reiciendis ab sapiente.
+                </p>
+                <a href="#" class=""><i class="bi bi-twitter text-dark mx-1"></i></a>
+                <a href="#" class=""><i class="bi bi-facebook text-dark mx-1"></i></a>
+                <a href="#" class=""><i class="bi bi-instagram text-dark mx-1"></i></a>
+                <a href="#" class=""><i class="bi bi-linkedin text-dark mx-1"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <!--Person 2-->
+          <div class="col-md-6 col-lg-3">
+            <div class="card bg-light">
+              <div class="card-body text-center">
+                <img src="https://randomuser.me/api/portraits/men/10.jpg" class="rounded-circle mb-3">
+                <h3 class="card-title mb-3">Tony Strange</h3>
+                <p class="card-text">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo, soluta nobis amet reiciendis ab sapiente.
+                </p>
+                <a href="#" class=""><i class="bi bi-twitter text-dark mx-1"></i></a>
+                <a href="#" class=""><i class="bi bi-facebook text-dark mx-1"></i></a>
+                <a href="#" class=""><i class="bi bi-instagram text-dark mx-1"></i></a>
+                <a href="#" class=""><i class="bi bi-linkedin text-dark mx-1"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <!--Person 3-->
+
+          <div class="col-md-6 col-lg-3">
+            <div class="card bg-light">
+              <div class="card-body text-center">
+                <img src="https://randomuser.me/api/portraits/men/9.jpg" class="rounded-circle mb-3">
+                <h3 class="card-title mb-3">Thor Parker</h3>
+                <p class="card-text">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo, soluta nobis amet reiciendis ab sapiente.
+                </p>
+                <a href="#" class=""><i class="bi bi-twitter text-dark mx-1"></i></a>
+                <a href="#" class=""><i class="bi bi-facebook text-dark mx-1"></i></a>
+                <a href="#" class=""><i class="bi bi-instagram text-dark mx-1"></i></a>
+                <a href="#" class=""><i class="bi bi-linkedin text-dark mx-1"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <!--Person 4-->
+          <div class="col-md-6 col-lg-3">
+            <div class="card bg-light">
+              <div class="card-body text-center">
+                <img src="https://randomuser.me/api/portraits/men/18.jpg" class="rounded-circle mb-3">
+                <h3 class="card-title mb-3">Peter Odinson</h3>
+                <p class="card-text">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo, soluta nobis amet reiciendis ab sapiente.
+                </p>
+                <a href="#" class=""><i class="bi bi-twitter text-dark mx-1"></i></a>
+                <a href="#" class=""><i class="bi bi-facebook text-dark mx-1"></i></a>
+                <a href="#" class=""><i class="bi bi-instagram text-dark mx-1"></i></a>
+                <a href="#" class=""><i class="bi bi-linkedin text-dark mx-1"></i></a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
