--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 
+<!--Default-->
+
 <html lang="en">
   <head>
     <meta charset="UTF-8">
@@ -7,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- Implementation of Bootstrap -->
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"> <!--Allows us to use Bootstrap icons-->
     <link rel="stylesheet" href="style.css"> <!--Link to the custom style sheet to seperate our CSS from HTML-->
@@ -15,7 +18,6 @@
   </head>
 
   <body>
-
 <!-- Navbar -->
 
       <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top"> <!--Implements the navbar, expand is set to large meaning that it will only expand when the screensize is large, otherwise it will remain a hamburger menu. Bg is set to dark meaning the background is dark. Navbar dark makes the text light, because the navbar is dark-->
@@ -98,7 +100,7 @@
       </div>
     </section>
 
-<!--Boxes-->
+<!--Boxes with Buttons-->
 
     <section class="p-5"> <!--Section with padding 5 all around-->
       <div class="container">
@@ -155,7 +157,8 @@
       </div>
     </section>
 
-    <!--Learn Sections-->
+<!--Learn Sections-->
+
     <section id="ml" class="p-5">
       <div class="container">
         <div class="row align-items-center justify-content-between">
@@ -226,6 +229,7 @@
     </section>
 
 <!--FAQ Accordion-->
+
     <section id="questions" class="p-5">
       <div class="container">
         <h2 class="text-center mb-4">Frequently Asked Questions</h2>
@@ -294,6 +298,8 @@
         </div>
       </div>
     </section>
+
+<!--About Instructors-->
 
     <section id="about" class="p-5 bg-primary">
       <div class="container">
