--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"> <!--Allows us to use Bootstrap icons-->
-    <link rel="stylesheet" href="style.css"> <!--Link to the custom style sheet to seperate our CSS from HTML-->
 
-    <title>Personal Website</title> <!--Title the document to show up on the tab-->
+    <!--CSS Files-->
+    <link rel="stylesheet" href="style.css"> <!--Link to the custom style sheet to seperate our CSS from HTML-->
+    <link href='https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.css' rel='stylesheet' /> <!--This is to access MapBox-->
+
+    <title>Studying Bootstrap</title> <!--Title the document to show up on the tab-->
   </head>
 
   <body>
@@ -322,7 +325,7 @@
           <div class="col-md-6 col-lg-3">
             <div class="card bg-light">
               <div class="card-body text-center">
-                <img src="https://randomuser.me/api/portraits/men/11.jpg" class="rounded-circle mb-3">
+                <img src="https://randomuser.me/api/portraits/women/3.jpg" class="rounded-circle mb-3">
                 <h3 class="card-title mb-3">Stephen Stark</h3>
                 <p class="card-text">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo, soluta nobis amet reiciendis ab sapiente.
@@ -339,7 +342,7 @@
           <div class="col-md-6 col-lg-3">
             <div class="card bg-light">
               <div class="card-body text-center">
-                <img src="https://randomuser.me/api/portraits/men/10.jpg" class="rounded-circle mb-3">
+                <img src="https://randomuser.me/api/portraits/women/6.jpg" class="rounded-circle mb-3">
                 <h3 class="card-title mb-3">Tony Strange</h3>
                 <p class="card-text">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo, soluta nobis amet reiciendis ab sapiente.
@@ -357,7 +360,7 @@
           <div class="col-md-6 col-lg-3">
             <div class="card bg-light">
               <div class="card-body text-center">
-                <img src="https://randomuser.me/api/portraits/men/9.jpg" class="rounded-circle mb-3">
+                <img src="https://randomuser.me/api/portraits/women/2.jpg" class="rounded-circle mb-3">
                 <h3 class="card-title mb-3">Thor Parker</h3>
                 <p class="card-text">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo, soluta nobis amet reiciendis ab sapiente.
@@ -374,7 +377,7 @@
           <div class="col-md-6 col-lg-3">
             <div class="card bg-light">
               <div class="card-body text-center">
-                <img src="https://randomuser.me/api/portraits/men/18.jpg" class="rounded-circle mb-3">
+                <img src="https://randomuser.me/api/portraits/women/12.jpg" class="rounded-circle mb-3">
                 <h3 class="card-title mb-3">Peter Odinson</h3>
                 <p class="card-text">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo, soluta nobis amet reiciendis ab sapiente.
@@ -390,7 +393,77 @@
       </div>
     </section>
 
+<!--Contact Info and Map-->
+
+    <section class="p-5">
+      <div class="container">
+        <div class="row g-4">
+          <div class="col-md">
+            <h2 class="text-center mb-4">
+              Contact Info
+            </h2>
+            <ul class="list-group list-group-flush lead">
+              <li class="list-group-item">
+                <span class="fw-bold">
+                  Personal Email:
+                </span>   redayzarra@gmail.com
+              </li>
+              <li class="list-group-item">
+                <span class="fw-bold">
+                  School Email:
+                </span>   reday_zarra@student.uml.edu
+              </li>
+              <li class="list-group-item">
+                <span class="fw-bold">
+                  Number:
+                </span>   (351)-218-4088
+              </li>
+              <li class="list-group-item">
+                <span class="fw-bold">
+                  Located:
+                </span>   Greater Boston, MA
+              </li>
+            </ul>
+          </div>
+          <div class="col-md">
+            <div id='map' style='width: 400px; height: 300px;'></div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+<!--Footer-->
+
+    <footer class="p-5 bg-dark text-white text-center position-relative">
+      <div class="container">
+        <p class="lead">
+          Copyright &copy; 2021 ReDay Zarra
+        </p>
+        <a href="#" class="position-absolute bottom-0 end-0 p-5">
+          <i class="bi bi-arrow-up-circle h1"></i>
+        </a>
+      </div>
+    </footer>
+
     <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script 
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" 
+    crossorigin="anonymous">
+    </script>
+
+    <!--MapBox Script-->
+    <script src='https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.js'></script>
+
+    <!--Custom Javascript-->
+    <script>
+      mapboxgl.accessToken = 'pk.eyJ1Ijoib2tyZWRheSIsImEiOiJjbGNiMnFicHIybHc4NDFuenp0dW5sbHF4In0.5v8QdGCEVNoDWCLg0Yfx5A';
+      var map = new mapboxgl.Map({
+      container: 'map',
+      style: 'mapbox://styles/mapbox/streets-v11',
+      center: [-71.3247, 42.6553],
+      zoom: 16,
+      });
+    </script>
   </body>
 </html>
