--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
       <div class="container"> <!--Container to make sure the contents don't press up against the edge-->
         <div class="d-sm-flex align-items-center justify-content-between"> <!--The flex turns the two elements below, the heading and image, into a flex row (so they are in the same row). The sm specifies that the flex will only activate with sizes bigger than the small screen size-->
           <div>
-            <h1>Welcome to 
-              <span class="text-warning"> <!--Makes it so that the text below is a different color-->
-                my website!
-              </span></h1> <!--Just means heading 1 and we are specifying the heading text-->
-              <p class="lead"> <!--Adds a paragraph, what you see below, and we can make the text bigger with the lead class-->
-                I study and teach biomedical engineering, machine learning, 
-                and web development.
-              </p>
-              <button class="btn btn-primary btn-lg">Contact Me</button> <!--Creates a button where the button color is primary (or blue) and the button size is large. The text inside the button is Contact Me-->
+            <h1>
+              Welcome to 
+              <span class="text-warning">my website!</span> <!--Makes it so that the text below is a different color-->
+            </h1> <!--Just means heading 1 and we are specifying the heading text-->
+            <p class="lead"> <!--Adds a paragraph, what you see below, and we can make the text bigger with the lead class-->
+              I study and teach biomedical engineering, machine learning, 
+              and web development.
+            </p>
+            <button class="btn btn-primary btn-lg" data-bs-toggle="modal" data-bs-target="#enroll">Contact Me</button> <!--Creates a button where the button color is primary (or blue) and the button size is large. The text inside the button is Contact Me-->
           </div>
           <img class="img-fluid w-50 d-none d-sm-block" src = "img/showcase.svg" alt=""/> <!--The img tag tells HTML that we are putting an image in, and the img-fluid class makes it so that the image is bound to the container and the w-50 makes it 50% of its original size. The src specifes what image we are putting in and the alt tag can be used to add an alternative text/desription to the image-->
         </div>
@@ -444,6 +444,62 @@
         </a>
       </div>
     </footer>
+
+<!--Modal-->
+
+    <div class="modal fade" id="enroll" tabindex="-1" role="dialog" aria-labelledby="enroll" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="enroll">Contact Form</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <p class="lead">
+              Fill out this form and I will reach out to you!
+            </p>
+            <form action="">
+              <div class="mb-3">
+                <label for="first-name" class="col-form-label">
+                  First Name:
+                </label>
+                <input type="text" class="form-control" id="first-name">
+              </div>
+            </form>
+            <form action="">
+              <div class="mb-3">
+                <label for="last-name" class="col-form-label">
+                  Last Name:
+                </label>
+                <input type="text" class="form-control" id="last-name">
+              </div>
+            </form>
+            <form action="">
+              <div class="mb-3">
+                <label for="email" class="col-form-label">
+                  Email:
+                </label>
+                <input type="text" class="form-control" id="email">
+              </div>
+            </form>
+            <form action="">
+              <div class="mb-3">
+                <label for="number" class="col-form-label">
+                  Number:
+                </label>
+                <input type="text" class="form-control" id="number">
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Submit</button>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- JavaScript Bundle with Popper -->
     <script 
