Testing GitHub pages

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="d-sm-flex align-items-center justify-content-between"> <!--The flex turns the two elements below, the heading and image, into a flex row (so they are in the same row). The sm specifies that the flex will only activate with sizes bigger than the small screen size-->
           <div>
             <h1>
-              Welcome to 
+              Hello, welcome to 
               <span class="text-warning">my website!</span> <!--Makes it so that the text below is a different color-->
             </h1> <!--Just means heading 1 and we are specifying the heading text-->
             <p class="lead"> <!--Adds a paragraph, what you see below, and we can make the text bigger with the lead class-->
